Changed endpoints, added global data and changed the update interval
