# src/public/api-documentation/swagger.json
@@ -1,140 +1,201 @@
 {
-  "swagger" : "2.0",
-  "info" : {
-    "version" : "1.0.0",
-    "title" : "coronavirus-api",
-    "license" : {
-      "name" : "Licença MIT",
-      "url" : "https://github.com/ArturMiguel/coronavirus-api/blob/master/LICENSE"
+    "swagger": "2.0",
+    "info": {
+        "version": "1.0.0",
+        "title": "coronavirus-api",
+        "license": {
+            "name": "Licença MIT",
+            "url": "https://github.com/ArturMiguel/coronavirus-api/blob/master/LICENSE"
+        },
+        "description": "API para consulta de dados sobre o coronavírus (COVID-19)."
     },
-    "description" : "API para consulta de dados sobre o coronavírus (COVID-19)."
-  },
-  "tags" : [ {
-    "name" : "Countries",
-    "description" : "(Dados de Google News)"
-  }, {
-    "name" : "States",
-    "description" : "(Dados de Google News)"
-  } ],
-  "paths" : {
-    "/api/countries" : {
-      "get" : {
-        "tags" : [ "Countries" ],
-        "summary" : "Retorna os dados sobre o coronavírus em todos os países disponíveis e seus estados.",
-        "description" : "Alguns países e estados podem não estar disponíveis pois a fonte onde os dados são coletados não possui registros deles. A API atualiza esses dados a cada 6 horas.",
-        "responses" : {
-          "200" : {
-            "description" : "ok",
-            "schema" : {
-              "type" : "array",
-              "items" : {
-                "$ref" : "#/definitions/Country"
-              }
+    "tags": [
+        {
+            "name": "Global",
+            "description": "(Dados globais retirados do Google News)"
+        },
+        {
+            "name": "Countries",
+            "description": "(Dados de países retirados do Google News)"
+        },
+        {
+            "name": "States",
+            "description": "(Dados de estados retirados do Google News)"
+        }
+    ],
+    "paths": {
+        "/api/v1/global": {
+            "get": {
+                "tags": [
+                    "Global"
+                ],
+                "summary": "Retorna os dados globais sobre o coronavírus.",
+                "description": "Dados quantitativos do coronavírus em todo o mundo conforme a fonte. A API atualiza esses dados a cada 4 horas. O campo \"country\" na resposta tem o valor \"Global\".",
+                "responses": {
+                    "200": {
+                        "description": "ok",
+                        "schema": {
+                            "type": "array",
+                            "items": {
+                                "$ref": "#/definitions/Global"
+                            }
+                        }
+                    }
+                }
             }
-          }
-        }
-      }
-    },
-    "/api/countries/{country}" : {
-      "get" : {
-        "tags" : [ "Countries" ],
-        "summary" : "Consulta um país pelo nome e retorna seus dados sobre o coronavírus e de seus estados.",
-        "description" : "Alguns países e estados podem não estar disponíveis pois a fonte onde os dados são coletados não possui registros deles. A API atualiza esses dados a cada 6 horas.",
-        "produces" : [ "application/json" ],
-        "parameters" : [ {
-          "name" : "country",
-          "in" : "path",
-          "description" : "Nome do país",
-          "required" : true,
-          "type" : "string"
-        } ],
-        "responses" : {
-          "200" : {
-            "description" : "ok",
-            "schema" : {
-              "type" : "array",
-              "items" : {
-                "$ref" : "#/definitions/Country"
-              }
+        },
+        "/api/v1/countries": {
+            "get": {
+                "tags": [
+                    "Countries"
+                ],
+                "summary": "Retorna os dados sobre o coronavírus em todos os países e de seus estados.",
+                "description": "Dados quantitativos do coronavírus em todos os países disponíveis na fonte, incluindo seus estados. Alguns países e estados podem não estar disponíveis pois a fonte não possui registros deles. A API atualiza esses dados a cada 4 horas.",
+                "responses": {
+                    "200": {
+                        "description": "ok",
+                        "schema": {
+                            "type": "array",
+                            "items": {
+                                "$ref": "#/definitions/Country"
+                            }
+                        }
+                    }
+                }
             }
-          }
-        }
-      }
-    },
-    "/api/states/{state}" : {
-      "get" : {
-        "tags" : [ "States" ],
-        "summary" : "Consulta um estado pelo nome e retorna seus dados sobre o coronavírus.",
-        "description" : "Alguns estados podem não estar disponíveis pois a fonte onde os dados são coletados não possuí registros deles. A API atualiza esses dados a cada 6 horas.",
-        "produces" : [ "application/json" ],
-        "parameters" : [ {
-          "name" : "state",
-          "in" : "path",
-          "description" : "Nome do estado",
-          "required" : true,
-          "type" : "string"
-        } ],
-        "responses" : {
-          "200" : {
-            "description" : "ok",
-            "schema" : {
-              "type" : "array",
-              "items" : {
-                "$ref" : "#/definitions/State"
-              }
+        },
+        "/api/v1/countries/{country}": {
+            "get": {
+                "tags": [
+                    "Countries"
+                ],
+                "summary": "Consulta um país pelo nome e retorna seus dados sobre o coronavírus e de seus estados.",
+                "description": "Dados quantitativos do coronavírus em um país específico, incluindo seus estados. Alguns países e estados podem não estar disponíveis pois a fonte não possui registros deles. A API atualiza esses dados a cada 4 horas.",
+                "produces": [
+                    "application/json"
+                ],
+                "parameters": [
+                    {
+                        "name": "country",
+                        "in": "path",
+                        "description": "Nome do país",
+                        "required": true,
+                        "type": "string"
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "ok",
+                        "schema": {
+                            "type": "array",
+                            "items": {
+                                "$ref": "#/definitions/Country"
+                            }
+                        }
+                    }
+                }
             }
-          }
+        },
+        "/api/v1/states/{state}": {
+            "get": {
+                "tags": [
+                    "States"
+                ],
+                "summary": "Consulta um estado pelo nome e retorna seus dados sobre o coronavírus.",
+                "description": "Dados quantitativos do coronavírus em um estado específico. Alguns estados podem não estar disponíveis pois a fonte não possui registros deles. A API atualiza esses dados a cada 4 horas.",
+                "produces": [
+                    "application/json"
+                ],
+                "parameters": [
+                    {
+                        "name": "state",
+                        "in": "path",
+                        "description": "Nome do estado",
+                        "required": true,
+                        "type": "string"
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "ok",
+                        "schema": {
+                            "type": "array",
+                            "items": {
+                                "$ref": "#/definitions/State"
+                            }
+                        }
+                    }
+                }
+            }
         }
-      }
-    }
-  },
-  "definitions" : {
-    "Country" : {
-      "type" : "object",
-      "properties" : {
-        "country" : {
-          "type" : "string"
-        },
-        "confirmed" : {
-          "type" : "string"
-        },
-        "recovered" : {
-          "type" : "string"
-        },
-        "death" : {
-          "type" : "string"
-        },
-        "states" : {
-          "type" : "array",
-          "items" : {
-            "$ref" : "#/definitions/State"
-          }
-        }
-      }
     },
-    "State" : {
-      "type" : "object",
-      "properties" : {
-        "state" : {
-          "type" : "string"
+    "definitions": {
+        "Global": {
+            "type": "object",
+            "properties": {
+                "country": {
+                    "type": "string"
+                },
+                "confirmed": {
+                    "type": "string"
+                },
+                "recovered": {
+                    "type": "string"
+                },
+                "death": {
+                    "type": "string"
+                }
+            }
         },
-        "confirmed" : {
-          "type" : "string"
+        "Country": {
+            "type": "object",
+            "properties": {
+                "country": {
+                    "type": "string"
+                },
+                "confirmed": {
+                    "type": "string"
+                },
+                "recovered": {
+                    "type": "string"
+                },
+                "death": {
+                    "type": "string"
+                },
+                "states": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/State"
+                    }
+                }
+            }
         },
-        "recovered" : {
-          "type" : "string"
-        },
-        "death" : {
-          "type" : "string"
+        "State": {
+            "type": "object",
+            "properties": {
+                "state": {
+                    "type": "string"
+                },
+                "confirmed": {
+                    "type": "string"
+                },
+                "recovered": {
+                    "type": "string"
+                },
+                "death": {
+                    "type": "string"
+                }
+            }
         }
-      }
-    }
-  },
-  "externalDocs" : {
-    "description" : "GitHub",
-    "url" : "https://github.com/ArturMiguel/coronavirus-api"
-  },
-  "schemes" : [ "https", "http" ],
-  "host" : "coronavirus-api.glitch.me",
-  "basePath" : "/"
+    },
+    "externalDocs": {
+        "description": "GitHub",
+        "url": "https://github.com/ArturMiguel/coronavirus-api"
+    },
+    "schemes": [
+        "https",
+        "http"
+    ],
+    "host": "coronavirus-api.glitch.me",
+    "basePath": "/"
 }
