# src/routes/CountryRouter.js
@@ -1,7 +1,7 @@
 const router = require('express').Router()
 const CountryController = require('../controllers/CountryController')
 
-router.get('/api/countries', CountryController.getCountries)
-router.get('/api/countries/:country', CountryController.getCountry)
+router.get('/api/v1/countries', CountryController.getCountries)
+router.get('/api/v1/countries/:country', CountryController.getCountry)
 
 module.exports = router
