# src/routes/StateRouter.js
@@ -1,6 +1,6 @@
 const router = require('express').Router()
 const StateController = require('../controllers/StateController')
 
-router.get('/api/states/:state', StateController.getState)
+router.get('/api/v1/states/:state', StateController.getState)
 
 module.exports = router
